package hydrad;

message response_error {
  required uint32 error_code = 1;
  required string error_message = 2;
}

message request_version {
}

message response_version {
  required string version = 1;
  message deps_t {
    required string uv_version = 1;
  }
  required deps_t deps = 2;
}

message request_stats {
}

message response_stats {
  required uint32 uptime = 1;
  message rusage_t {
    required uint64 rss = 1;
    required uint64 ru_maxrss = 2;
    required float ru_stime = 3;
    required float ru_utime = 4;
  }
  required rusage_t rusage = 2;
  message requests_t {
    required uint64 total_count = 1;
    required uint64 failed_count = 2;
    required uint64 error_count = 3;
  }
  required requests_t requests = 3;
}
